--- a/src/App.css
+++ b/src/App.css
@@ -823,7 +823,7 @@ section[role=individual-componentsecond] {
   width: 90px;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 992px) and (min-width: 448px) {
   .servicewrapper {
     height: -moz-fit-content;
     height: fit-content;
@@ -836,6 +836,44 @@ section[role=individual-componentsecond] {
     flex-direction: column;
     width: -moz-fit-content;
     width: fit-content;
+  }
+}
+@media only screen and (max-width: 447px) and (min-width: 290px) {
+  .servicewrapper {
+    height: -moz-fit-content;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+  }
+  .servicewrapper-details {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .servicewrapper-details .service {
+    width: 300px;
+    padding: 36px 20px;
+  }
+}
+@media only screen and (max-width: 289px) {
+  .servicewrapper {
+    height: -moz-fit-content;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+  }
+  .servicewrapper-details {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .servicewrapper-details .service {
+    width: 250px;
+    padding: 5px;
   }
 }
 .hiresection {
@@ -854,6 +892,11 @@ section[role=individual-componentsecond] {
 }
 .hiresection-detail h1 {
   color: #ffffff;
+}
+@media all and (max-width: 576px) {
+  .hiresection-detail h1 {
+    font-size: 27px;
+  }
 }
 .hiresection-detail-content {
   width: 100%;
@@ -882,6 +925,15 @@ section[role=individual-componentsecond] {
   align-items: center;
 }
 
+@media only screen and (max-width: 480px) {
+  .hiresection-detail-content {
+    flex-wrap: wrap;
+    margin: 0;
+  }
+  .hiresection-detail-content .hirebtn {
+    margin-left: 50px;
+  }
+}
 .contactwrapper {
   background-color: #edbc11;
   padding-bottom: 0;
@@ -1023,6 +1075,17 @@ section[role=individual-componentsecond] {
   margin: auto 20px;
 }
 
+@media only screen and (max-width: 992px) {
+  .faqwrapper {
+    margin: 0;
+  }
+  .faqwrapper-accordion {
+    width: 100%;
+  }
+  .faqwrapper-accordion .accordion-body {
+    margin: 0;
+  }
+}
 .headerwrapper {
   width: 100%;
   height: 150px;
@@ -1138,6 +1201,63 @@ section[role=individual-componentsecond] {
   color: #f9ca21;
 }
 
+@media only screen and (max-width: 992px) and (min-width: 769px) {
+  .worksectionwrapper-head {
+    flex-direction: column;
+    align-items: start;
+    padding: 60px 60px;
+  }
+  .worksectionwrapper-head-btns {
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .gridwrapper {
+    padding: 0 50px !important;
+  }
+}
+@media only screen and (max-width: 768px) and (min-width: 480px) {
+  .worksectionwrapper-head {
+    flex-direction: column;
+    align-items: start;
+    padding: 60px 60px;
+  }
+  .worksectionwrapper-head-btns {
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .gridwrapper {
+    display: flex !important;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 0 60px !important;
+  }
+  .gridwrapper > div img {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+}
+@media only screen and (max-width: 479px) {
+  .worksectionwrapper-head {
+    flex-direction: column;
+    align-items: start;
+    padding: 60px 20px;
+  }
+  .worksectionwrapper-head-btns {
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 0;
+  }
+  .gridwrapper {
+    display: flex !important;
+    flex-direction: column;
+    overflow: hidden;
+    padding: 0 60px !important;
+  }
+  .gridwrapper > div img {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+}
 .blogsectionwrapper {
   height: -moz-fit-content;
   height: fit-content;
