--- a/src/styles/components/_Faqsection.scss
+++ b/src/styles/components/_Faqsection.scss
@@ -39,3 +39,15 @@
     }
   }
 }
+@media only screen and (max-width:992px){
+  .faqwrapper{
+    margin: 0;
+    &-accordion{
+      width: 100%;
+      .accordion-body{
+        // background-color: red;
+        margin: 0;
+    }
+    }
+  }
+}
