--- a/src/styles/components/_Hiresection.scss
+++ b/src/styles/components/_Hiresection.scss
@@ -15,6 +15,9 @@
         &-detail{
             h1{
                 color: $color-white;
+                @include responsive-for($sm){
+                    font-size:$section-head;
+                }
             }
            &-content{
             width: 100%;
@@ -46,5 +49,18 @@
                 align-items: center;
             }
            }
+        }
+    }
+    @media only screen and (max-width:480px){
+        .hiresection{
+                &-detail{
+              &-content{
+            flex-wrap: wrap;
+            margin: 0;
+            .hirebtn{
+                margin-left: 50px;
+            }
+              }
+            }
         }
     }
