--- a/src/styles/components/_Servicesection.scss
+++ b/src/styles/components/_Servicesection.scss
@@ -74,7 +74,7 @@
             width: 90px;
         }
     }
-    @media only screen and (max-width:992px){
+    @media only screen and (max-width:992px) and (min-width:448px){
         .servicewrapper{
             // border: 2px solid blue;
             height: fit-content;
@@ -89,3 +89,40 @@
             }
         }
     }
+     @media only screen and (max-width:447px)
+     and (min-width:290px){
+        .servicewrapper{
+            // border: 2px solid blue;
+              height: fit-content;
+            justify-content: center;
+            align-items: center;
+            &-details{
+                  margin: 0;
+                display: flex;
+                flex-direction: column;
+                width: fit-content;
+               .service{
+                width: 300px;
+                padding: 36px 20px;
+               }
+            }
+        }
+     }
+       @media only screen and (max-width:289px){
+        .servicewrapper{
+            // border: 2px solid blue;
+              height: fit-content;
+            justify-content: center;
+            align-items: center;
+            &-details{
+                  margin: 0;
+                display: flex;
+                flex-direction: column;
+                width: fit-content;
+               .service{
+                width: 250px;
+                padding: 5px;
+               }
+            }
+        }
+       }
