--- a/src/styles/components/_Blogsection.scss
+++ b/src/styles/components/_Blogsection.scss
@@ -1,5 +1,4 @@
 .blogsectionwrapper{
-    // border: 2px solid green;
     height: fit-content;
     padding-top: 70px;
     margin-bottom: 100px;
@@ -64,6 +63,40 @@
         }
         .active{
             background-color: $primary;
+        }
+    }
+}
+@media only screen and (max-width:992px) and (min-width:768px){
+    .blogsectionwrapper{
+        .headers{
+
+        }
+        &-cards{
+            flex-direction: column;
+        }
+    }
+}
+@media only screen and (max-width:767px) and (min-width:480px){
+     .blogsectionwrapper{
+        .headers{
+
+        }
+        &-cards{
+            flex-direction: column;
+        }
+    }
+}
+@media only screen and (max-width:479px){ 
+         .blogsectionwrapper{
+        .headers{
+
+        }
+        &-cards{
+            flex-direction: column;
+            &-card{
+                width: 100%;
+                height: 450px;
+            }
         }
     }
 }
