full responsiveness and hamburger menu added

--- a/src/styles/components/_Herosection.scss
+++ b/src/styles/components/_Herosection.scss
@@ -154,6 +154,10 @@
             &-mail{
                 display: none;
             }
+            &-contact {
+                flex-direction: column;
+                align-items: start;
+            }
         &-info{
         // position: absolute;
         width: 70%;
