--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -11,4 +11,5 @@
 @import './Header';
 @import './Worksection';
 @import './Blogsection';
-@import './Testimonials'
+@import './Testimonials';
+@import './Hamburgermenu';
