--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,10 @@ section[role=individual-componentsecond] {
   .Herosectionwrapper-coloroverlay-mail {
     display: none;
   }
+  .Herosectionwrapper-coloroverlay-contact {
+    flex-direction: column;
+    align-items: start;
+  }
   .Herosectionwrapper-coloroverlay-info {
     width: 70%;
     margin-left: 20px;
@@ -1557,6 +1561,54 @@ section[role=individual-componentsecond] {
     display: none;
   }
 }
+.Hamburgermenu {
+  width: 210px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+}
+.Hamburgermenu-content {
+  background-color: #151931;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.Hamburgermenu-content ul li {
+  list-style: none;
+  color: #E2E1F1;
+  padding: 10px;
+  cursor: pointer;
+}
+.Hamburgermenu-content ul li svg {
+  margin-right: 10px;
+  font-size: 18px;
+}
+.Hamburgermenu-content p {
+  text-align: center;
+  color: #B4B3C2;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.Hamburgermenu-content-menu li:hover {
+  color: #f9ca21; /* icon and text will both turn white */
+}
+
+.hamburger-icon {
+  right: 5%;
+  top: 2%;
+  position: absolute;
+  z-index: 1001;
+  color: #f9ca21;
+}
+
 .maincontainer {
   display: flex;
 }
