--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,31 @@
 @charset "UTF-8";
 * {
-  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url("./assets/fonts/Poppins-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("./assets/fonts/Poppins-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("./assets/fonts/Poppins-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+/* Apply globally */
+body {
+  font-family: "Poppins", sans-serif;
 }
 
 h1 {
@@ -1604,7 +1626,7 @@ section[role=individual-componentsecond] {
 .hamburger-icon {
   right: 5%;
   top: 2%;
-  position: absolute;
+  position: fixed;
   z-index: 1001;
   color: #f9ca21;
 }
