--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,7 @@ body {
 }
 @media only screen and (max-width:992px){
    .maincontainer{
-    width: 100vw;
+    // width: 100vw;
     // border: 2px solid blue;
     &-sidebar{
         display: none;
