--- a/src/styles/components/_Aboutsection.scss
+++ b/src/styles/components/_Aboutsection.scss
@@ -58,6 +58,7 @@
         }
     }
         &-work{
+            width: 100%;
             // border: 2px solid blue;
             justify-content: center;
         display: flex;
@@ -87,7 +88,7 @@
         }
     }
 }
-@media only screen and (max-width:992px) and (min-width:768px){
+@media only screen and (max-width:1105px) and (min-width:768px){
   .Aboutsectionwrapper{
     &-details{
         gap: 0px;
