--- a/src/styles/components/_Resumesection.scss
+++ b/src/styles/components/_Resumesection.scss
@@ -129,6 +129,34 @@
         }
     }
 }
+@media only screen and (max-width:1300px) and (min-width:1201px){
+  .Resumesectionwrapper-experience-individual{
+  .Resumeborder{
+    left: 0.5rem;
+    &-boxes{
+      padding-left: 40px;
+       .box{
+      width: 360px;
+      height: 200px;
+    }
+    }
+  }
+}
+}
+@media only screen and (max-width:1200px) and (min-width:993px){
+.Resumesectionwrapper-experience-individual{
+  .Resumeborder{
+    left: 0.1rem;
+    &-boxes{
+      padding-left: 30px;
+      .box{
+        width: 300px;
+        height: 200px;
+      }
+    }
+  }
+}
+}
 @media only screen and (max-width:992px) and (min-width:768px){
  .Resumesectionwrapper{
   padding: 0;
