--- a/src/styles/components/_Blogsection.scss
+++ b/src/styles/components/_Blogsection.scss
@@ -66,6 +66,13 @@
         }
     }
 }
+@media only screen and (max-width:1440px) and (min-width:993px){
+   .blogsectionwrapper{
+    &-cards{
+        flex-wrap: wrap;
+    }
+   }
+}
 @media only screen and (max-width:992px) and (min-width:768px){
     .blogsectionwrapper{
         .headers{
