--- a/src/styles/components/_Servicesection.scss
+++ b/src/styles/components/_Servicesection.scss
@@ -74,6 +74,22 @@
             width: 90px;
         }
     }
+    @media only screen and (max-width:1440px) and  (min-width:1201px){
+        .servicewrapper{
+            height: fit-content;
+        }
+        .servicewrapper-details{
+            flex-wrap: wrap;
+        }
+    }
+    @media only screen and (max-width:1200px) and (min-width:993px){
+        .servicewrapper{
+            height: fit-content;
+        }
+        .servicewrapper-details{
+            flex-wrap: wrap;
+        }
+    }
     @media only screen and (max-width:992px) and (min-width:448px){
         .servicewrapper{
             // border: 2px solid blue;
@@ -102,11 +118,14 @@
                 flex-direction: column;
                 width: fit-content;
                .service{
-                width: 300px;
+                width: 260px;
                 padding: 36px 20px;
                }
             }
         }
+         .cardimg{
+            // transform: translateX(-20px);
+         }
      }
        @media only screen and (max-width:289px){
         .servicewrapper{
@@ -120,7 +139,7 @@
                 flex-direction: column;
                 width: fit-content;
                .service{
-                width: 250px;
+                width: 230px;
                 padding: 5px;
                }
             }
