--- a/src/styles/components/_Worksection.scss
+++ b/src/styles/components/_Worksection.scss
@@ -104,6 +104,17 @@
         }
     }
 }
+@media only screen and (max-width:1233px) and (min-width:993px){
+    .worksectionwrapper{
+        &-head{
+            padding-left: 0;
+            padding-right: 0;
+            &-btns{
+                width: auto;
+            }
+        }
+    }
+}
 @media only screen and (max-width:992px) and (min-width:769px){
     .worksectionwrapper{
      &-head{
@@ -113,7 +124,6 @@
         &-btns{
             flex-wrap: wrap;
             width: 100%;
-
         }
     }
 }
