--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor: none;
 }
 @font-face {
   font-family: 'Poppins';
@@ -27,6 +28,17 @@
 /* Apply globally */
 body {
   font-family: 'Poppins', sans-serif;
+  .cursor{
+    background-color: #f9ca21;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    position:fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    pointer-events: none
+    }
 }
 
 @import './styles/abstract/_index.scss';
