--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,18 @@ body .cursor {
   z-index: 3;
   pointer-events: none;
 }
+body button {
+  cursor: none;
+}
+body button:hover {
+  cursor: none;
+}
+body button:focus {
+  cursor: none;
+}
+body button:enabled {
+  cursor: none;
+}
 
 h1 {
   font-size: 40px;
@@ -135,7 +147,6 @@ section[role=individual-componentsecond] {
   list-style: none;
   color: #E2E1F1;
   padding: 10px;
-  cursor: pointer;
 }
 .sidebarwrapper-content ul li svg {
   margin-right: 10px;
